messing with QGlWidget
no functional changes

--- a/6DOFEngineeringScreen/dialog.ui
+++ b/6DOFEngineeringScreen/dialog.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QGLWidget" name="widget" native="true"/>
+    <widget class="QWidget" name="mainwidget" native="true"/>
    </item>
    <item>
     <layout class="QGridLayout" name="gridLayout_5">
@@ -157,14 +157,6 @@
   </layout>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <customwidgets>
-  <customwidget>
-   <class>QGLWidget</class>
-   <extends>QWidget</extends>
-   <header>glwidget.h</header>
-   <container>1</container>
-  </customwidget>
- </customwidgets>
  <resources/>
  <connections/>
 </ui>
