the cube is now working!  :)
The cube is now responding to my x,y,z data. For now  I have it set up
so that it simply rotates, once I get the yaw, pitch and roll data I
should be able to control its rotation more. I am reading the data from
a testbench and when it reaches the end of the file it jumps back and
starts reading from the beginning again. It still looks like a cube but
I am trying to see if we can make it look more like a sword

--- a/6DOFEngineeringScreen/files.qrc
+++ b/6DOFEngineeringScreen/files.qrc
@@ -2,5 +2,6 @@
     <qresource prefix="/">
         <file>testbenchGEOM2D.txt</file>
         <file>testbenchNLLS2D.txt</file>
+        <file>in.txt</file>
     </qresource>
 </RCC>
