Added Config file, modified log file format and added which ant sent ranging request, changed config screen on dialog.ui, 4 reference ranging works now

--- a/6DOFEngineeringScreen/files.qrc
+++ b/6DOFEngineeringScreen/files.qrc
@@ -3,5 +3,6 @@
         <file>testbenchGEOM2D.txt</file>
         <file>testbenchNLLS2D.txt</file>
         <file>in.txt</file>
+        <file>Config.txt</file>
     </qresource>
 </RCC>
