--- a/6DOFEngineeringScreen/dialog.ui
+++ b/6DOFEngineeringScreen/dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>734</width>
-    <height>531</height>
+    <width>789</width>
+    <height>711</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tab">
       <attribute name="title">
@@ -171,13 +171,6 @@
        <string>Configuration</string>
       </attribute>
       <layout class="QGridLayout" name="gridLayout_9">
-       <item row="1" column="1">
-        <widget class="Line" name="line_2">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-        </widget>
-       </item>
        <item row="0" column="1">
         <widget class="QGroupBox" name="groupBox_3">
          <property name="font">
@@ -192,41 +185,11 @@
           <string>Radio Parameters</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_7">
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_6">
-            <property name="font">
-             <font>
-              <family>Arial</family>
-              <pointsize>14</pointsize>
-              <weight>50</weight>
-              <bold>false</bold>
-             </font>
-            </property>
-            <property name="text">
-             <string>USB Interface Port</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_5">
-            <property name="font">
-             <font>
-              <family>Arial</family>
-              <pointsize>14</pointsize>
-              <weight>50</weight>
-              <bold>false</bold>
-             </font>
-            </property>
-            <property name="text">
-             <string>Radio Port</string>
-            </property>
-           </widget>
-          </item>
           <item row="0" column="1">
            <widget class="QLineEdit" name="le_radioPort">
             <property name="font">
              <font>
-              <pointsize>14</pointsize>
+              <pointsize>18</pointsize>
              </font>
             </property>
             <property name="text">
@@ -235,7 +198,16 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QLineEdit" name="le_usbPort"/>
+           <widget class="QLineEdit" name="le_radioPort2">
+            <property name="font">
+             <font>
+              <pointsize>18</pointsize>
+             </font>
+            </property>
+            <property name="text">
+             <string>/dev/cu.usbmodem11</string>
+            </property>
+           </widget>
           </item>
           <item row="3" column="0" colspan="2">
            <layout class="QGridLayout" name="gridLayout_10">
@@ -260,6 +232,13 @@
             </item>
            </layout>
           </item>
+          <item row="2" column="1">
+           <widget class="Line" name="line_4">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
           <item row="2" column="0">
            <widget class="Line" name="line_3">
             <property name="orientation">
@@ -267,11 +246,110 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
-           <widget class="Line" name="line_4">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_6">
+            <property name="font">
+             <font>
+              <family>Arial</family>
+              <pointsize>14</pointsize>
+              <weight>50</weight>
+              <bold>false</bold>
+             </font>
             </property>
+            <property name="text">
+             <string>Radio 2 Port</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_5">
+            <property name="font">
+             <font>
+              <family>Arial</family>
+              <pointsize>14</pointsize>
+              <weight>50</weight>
+              <bold>false</bold>
+             </font>
+            </property>
+            <property name="text">
+             <string>Radio 1 Port</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="0" colspan="2">
+           <widget class="QGroupBox" name="groupBox_2">
+            <property name="font">
+             <font>
+              <family>Arial</family>
+              <pointsize>18</pointsize>
+             </font>
+            </property>
+            <property name="title">
+             <string>Solver Type</string>
+            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_4">
+             <item>
+              <widget class="QRadioButton" name="rb_geom2d">
+               <property name="font">
+                <font>
+                 <family>Arial</family>
+                 <pointsize>14</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Geometric 2D</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="rb_nlls2d">
+               <property name="font">
+                <font>
+                 <pointsize>14</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Non Linear Least Square 2D</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="rb_nlls3d">
+               <property name="font">
+                <font>
+                 <pointsize>14</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Non Linear Least Square 3d</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="rb_kf2d">
+               <property name="font">
+                <font>
+                 <pointsize>14</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Kalman Filter 2D</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="rb_kf3d">
+               <property name="font">
+                <font>
+                 <pointsize>14</pointsize>
+                </font>
+               </property>
+               <property name="text">
+                <string>Kalman Filter 3D</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
            </widget>
           </item>
          </layout>
@@ -289,27 +367,31 @@
           <string>Reference Positions</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_6">
-          <item row="0" column="0">
-           <widget class="QLabel" name="label">
-            <property name="font">
-             <font>
-              <pointsize>14</pointsize>
-             </font>
-            </property>
+          <item row="6" column="0">
+           <widget class="QLabel" name="label_15">
             <property name="text">
-             <string>Ref 1</string>
+             <string>z1</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="1">
-           <widget class="QLineEdit" name="le_ref1">
-            <property name="font">
-             <font>
-              <pointsize>14</pointsize>
-             </font>
-            </property>
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_14">
             <property name="text">
-             <string>-0.500</string>
+             <string>z0</string>
+            </property>
+           </widget>
+          </item>
+          <item row="8" column="0">
+           <widget class="QLabel" name="label_10">
+            <property name="text">
+             <string>x2</string>
+            </property>
+           </widget>
+          </item>
+          <item row="12" column="0">
+           <widget class="QLabel" name="label_12">
+            <property name="text">
+             <string>x3</string>
             </property>
            </widget>
           </item>
@@ -321,15 +403,39 @@
              </font>
             </property>
             <property name="text">
-             <string>Ref 2</string>
+             <string>y0</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label">
+            <property name="font">
+             <font>
+              <pointsize>14</pointsize>
+             </font>
+            </property>
+            <property name="text">
+             <string>x0</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QLineEdit" name="le_x0">
+            <property name="font">
+             <font>
+              <pointsize>18</pointsize>
+             </font>
+            </property>
+            <property name="text">
+             <string>-0.200</string>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QLineEdit" name="le_ref2">
+           <widget class="QLineEdit" name="le_y0">
             <property name="font">
              <font>
-              <pointsize>14</pointsize>
+              <pointsize>18</pointsize>
              </font>
             </property>
             <property name="text">
@@ -337,7 +443,7 @@
             </property>
            </widget>
           </item>
-          <item row="2" column="0">
+          <item row="4" column="0">
            <widget class="QLabel" name="label_4">
             <property name="font">
              <font>
@@ -345,23 +451,23 @@
              </font>
             </property>
             <property name="text">
-             <string>Ref 3</string>
+             <string>x1</string>
             </property>
            </widget>
           </item>
-          <item row="2" column="1">
-           <widget class="QLineEdit" name="le_ref3">
+          <item row="4" column="1">
+           <widget class="QLineEdit" name="le_x1">
             <property name="font">
              <font>
-              <pointsize>14</pointsize>
+              <pointsize>18</pointsize>
              </font>
             </property>
             <property name="text">
-             <string>0.500</string>
+             <string>-0.200</string>
             </property>
            </widget>
           </item>
-          <item row="3" column="0">
+          <item row="5" column="0">
            <widget class="QLabel" name="label_3">
             <property name="font">
              <font>
@@ -369,15 +475,15 @@
              </font>
             </property>
             <property name="text">
-             <string>Ref 4</string>
+             <string>y1</string>
             </property>
            </widget>
           </item>
-          <item row="3" column="1">
-           <widget class="QLineEdit" name="le_ref4">
+          <item row="5" column="1">
+           <widget class="QLineEdit" name="le_y1">
             <property name="font">
              <font>
-              <pointsize>14</pointsize>
+              <pointsize>18</pointsize>
              </font>
             </property>
             <property name="text">
@@ -385,86 +491,108 @@
             </property>
            </widget>
           </item>
-         </layout>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="Line" name="line">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QGroupBox" name="groupBox_2">
-         <property name="font">
-          <font>
-           <family>Arial</family>
-           <pointsize>18</pointsize>
-          </font>
-         </property>
-         <property name="title">
-          <string>Solver Type</string>
-         </property>
-         <layout class="QVBoxLayout" name="verticalLayout_4">
-          <item>
-           <widget class="QRadioButton" name="rb_geom2d">
-            <property name="font">
-             <font>
-              <family>Arial</family>
-              <pointsize>14</pointsize>
-             </font>
-            </property>
+          <item row="8" column="1">
+           <widget class="QLineEdit" name="le_x2">
             <property name="text">
-             <string>Geometric 2D</string>
+             <string>0.200</string>
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QRadioButton" name="rb_nlls2d">
-            <property name="font">
-             <font>
-              <pointsize>14</pointsize>
-             </font>
-            </property>
+          <item row="6" column="1">
+           <widget class="QLineEdit" name="le_z1">
             <property name="text">
-             <string>Non Linear Least Square 2D</string>
+             <string>-0.180</string>
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QRadioButton" name="rb_nlls3d">
-            <property name="font">
-             <font>
-              <pointsize>14</pointsize>
-             </font>
-            </property>
+          <item row="13" column="1">
+           <widget class="QLineEdit" name="le_y3">
             <property name="text">
-             <string>Non Linear Least Square 3d</string>
+             <string>0.000</string>
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QRadioButton" name="rb_kf2d">
-            <property name="font">
-             <font>
-              <pointsize>14</pointsize>
-             </font>
-            </property>
+          <item row="14" column="1">
+           <widget class="QLineEdit" name="le_z3">
             <property name="text">
-             <string>Kalman Filter 2D</string>
+             <string>0.180</string>
             </property>
            </widget>
           </item>
-          <item>
-           <widget class="QRadioButton" name="rb_kf3d">
-            <property name="font">
-             <font>
-              <pointsize>14</pointsize>
-             </font>
-            </property>
+          <item row="10" column="0">
+           <widget class="QLabel" name="label_11">
             <property name="text">
-             <string>Kalman Filter 3D</string>
+             <string>y2</string>
+            </property>
+           </widget>
+          </item>
+          <item row="9" column="0">
+           <widget class="QLabel" name="label_16">
+            <property name="text">
+             <string>z2</string>
+            </property>
+           </widget>
+          </item>
+          <item row="12" column="1">
+           <widget class="QLineEdit" name="le_x3">
+            <property name="text">
+             <string>0.200</string>
+            </property>
+           </widget>
+          </item>
+          <item row="14" column="0">
+           <widget class="QLabel" name="label_17">
+            <property name="text">
+             <string>z3</string>
+            </property>
+           </widget>
+          </item>
+          <item row="11" column="0" colspan="2">
+           <widget class="Line" name="line_7">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="13" column="0">
+           <widget class="QLabel" name="label_13">
+            <property name="text">
+             <string>y3</string>
+            </property>
+           </widget>
+          </item>
+          <item row="9" column="1">
+           <widget class="QLineEdit" name="le_z2">
+            <property name="text">
+             <string>0.000</string>
+            </property>
+           </widget>
+          </item>
+          <item row="7" column="0" colspan="2">
+           <widget class="Line" name="line_6">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="0" colspan="2">
+           <widget class="Line" name="line_5">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QLineEdit" name="le_z0">
+            <property name="text">
+             <string>0.180</string>
+            </property>
+           </widget>
+          </item>
+          <item row="10" column="1">
+           <widget class="QLineEdit" name="le_y2">
+            <property name="text">
+             <string>-0.180</string>
             </property>
            </widget>
           </item>
@@ -472,6 +600,26 @@
         </widget>
        </item>
        <item row="2" column="1">
+        <widget class="QPushButton" name="pb_set">
+         <property name="text">
+          <string>Set</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="1" column="0" colspan="2">
         <widget class="QGroupBox" name="groupBox_4">
          <property name="font">
           <font>
@@ -496,7 +644,7 @@
            <widget class="QLineEdit" name="le_numOfIter">
             <property name="font">
              <font>
-              <pointsize>14</pointsize>
+              <pointsize>18</pointsize>
              </font>
             </property>
             <property name="text">
@@ -515,7 +663,7 @@
            <widget class="QLineEdit" name="le_E">
             <property name="font">
              <font>
-              <pointsize>14</pointsize>
+              <pointsize>18</pointsize>
              </font>
             </property>
             <property name="text">
@@ -525,26 +673,6 @@
           </item>
          </layout>
         </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QPushButton" name="pb_set">
-         <property name="text">
-          <string>Set</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
        </item>
       </layout>
      </widget>
